tests/snapshots/terminal_override__terminal_output_tests_direct-2.snap
---
source: tests/terminal_override.rs
info:
  program: handlr
  args:
    - "--force-terminal-output=true"
    - mime
    - "./assets"
---
success: true
exit_code: 0
----- stdout -----
┌──────────┬────────────────────────┐
│[37m [39m[37mpath[39m[37m    [39m[37m [39m│[37m [39m[37mmime[39m[37m                  [39m[37m [39m│
├──────────┼────────────────────────┤
│[40m [49m[40m./assets[49m[40m [49m│[40m [49m[40mapplication/x-zerosize[49m[40m [49m│
└──────────┴────────────────────────┘

----- stderr -----
