tests/snapshots/terminal_override__terminal_output_tests_force_false.snap
---
source: tests/terminal_override.rs
info:
  program: handlr
  args:
    - "--force-terminal-output=false"
    - mime
    - "./assets"
---
success: true
exit_code: 0
----- stdout -----
path    	mime                  
./assets	application/x-zerosize

----- stderr -----
